k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mattailor-ai
  labels:
    name: mattailor-ai
    app: mattailor-ai
